--- a/wp-content/themes/wp-bootstrap-4-child/scss/content/_buttons.scss
+++ b/wp-content/themes/wp-bootstrap-4-child/scss/content/_buttons.scss
@@ -21,6 +21,11 @@ input[type="button"] {
     }
 }
 
+.btn, .btn-outine-* {
+    background-image: none;
+    filter: none;
+}
+
 .btn-outline-*:hover {
     color: #fff!important;
 }
