--- a/wp-content/themes/wp-bootstrap-4-child/scss/navigation/_header.scss
+++ b/wp-content/themes/wp-bootstrap-4-child/scss/navigation/_header.scss
@@ -127,6 +127,10 @@
 
 .mobile-menu {
 
+    ul {
+        padding-left: 0;
+    }
+
     #mobileNavbar {
         width: 100%;
         margin: 0 auto;
